# GHC_compiler

./: .gitignore  Makefile  README.md
src/: .gitignore  .ocamlformat  Makefile  dune  dune-project  internalize.ml  internalize.mli  joujou.ml  joujou.opam  lexer.mll  parser.mly  print.ml  print.mli  simplifier.ml  simplifier.mli  store.ml  symbols.ml  symbols.mli  syntax.ml  terms.ml  tester.ml  tester.opam  tsubst.ml  tsubst.mli  typecheck.ml  typecheck.mli  typerr.ml  types.ml  types.mli
src/pllib/: PLLib.ml  atom.ml  atom.mli  dune  error.ml  error.mli  exn.ml  export.ml  export.mli  identifier.ml  identifier.mli  import.ml  import.mli  lexerUtil.ml  lexerUtil.mli  loc.ml
test/: .gitignore  000.f  Makefile  capture.f  capture.spec2  caselim.f  caselim.spec2  caselim.spec3  caseofcase.f  caseofcase.spec2  caseofcase.spec3  caseofcase2.f  caseofcase2.spec2  caseofcase2.spec3  caseofcase3.f  caseofcase3.spec2  caseofcase3.spec3  caseofcase4.f  caseofcase4.spec2  caseofcase4.spec3  caseofknownconstr.f  caseofknownconstr.spec3  caseofknownconstr2.f  caseofknownconstr2.spec3  caseofknownconstr3.f  commutting.f  commutting.spec2  commutting.spec3  jfloat.fjrec  jinline_fail.fj  jinline_fail.spec3  preserve.f  preserve.spec2  preserve.spec3  preserve2.fj  preserve2.spec3  recursive.fjrec  rule_abort.fj  rule_abort.spec3  rule_beta.f  (+21 more)
test/bad/: illtyping1.fj  illtyping2.fj  illtyping7.fj  illtyping8.f
